###########################################################################
## $Id: CMakeLists.txt 2879 2010-07-01 14:02:00Z mellinger $
## Authors: Adam Wilson
## Description: Build information for BCI2000 and CMake

# Recurse down into all project subdirectories
ADD_SUBDIRECTORY( BCI2000CertificationTester )
ADD_SUBDIRECTORY( BCI2000CertificationAnalysis )


